added and modified queries for Tagesumsatzstatistik